; ModuleID = '/home/carl/AnghaBench/tmux/compat/extr_utf8proc.c_utf8proc_wctomb.c'
source_filename = "/home/carl/AnghaBench/tmux/compat/extr_utf8proc.c_utf8proc_wctomb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @utf8proc_wctomb(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i8*, i8** %4, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %18

9:                                                ; preds = %2
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @utf8proc_codepoint_valid(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %9
  store i32 -1, i32* %3, align 4
  br label %18

14:                                               ; preds = %9
  %15 = load i32, i32* %5, align 4
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @utf8proc_encode_char(i32 %15, i8* %16)
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %14, %13, %8
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @utf8proc_codepoint_valid(i32) #1

declare dso_local i32 @utf8proc_encode_char(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
